try fix side bar y-overflow

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -9,10 +9,9 @@
     top: 0; /* Stay at the top */
     left: 0;
     bottom: 0;
-    display: inline-block;
     font-size: 18px;
     padding: 8px 5px; /* list padding nest*/
-    overflow-x: scroll; /* Disable horizontal scroll */
+    overflow-x: hidden; /* Disable horizontal scroll */
     overflow-y: scroll; /* Enable vertical scroll*/
     color: white;/*white font*/
     padding-top:8%;
@@ -21,7 +20,12 @@
     
 }
 
-
+.toc-container {
+    
+    height: 100%;
+    margin-bottom: 8%;
+    
+}
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
     color: #f1f1f1;
