--- a/assets/css/tagpage.css
+++ b/assets/css/tagpage.css
@@ -329,6 +329,7 @@ code.highligher-rouge
     border-radius: 2px;
     font-family: "PT Serif",Georgia,"Times New Roman",serif !important;
     font-size: 0.92rem;
+    font-weight: 600;
     color: #4CAF50;
     background-color: #f8f8f8;
  
